# corny_ai

./: .gitignore  pyproject.toml
app/: app_home.py  lottie.py
corny_ai/: app_home.py  corny_ai.py
