[tool.poetry]
name = "corny-ai"
version = "0.1.0"
description = ""
authors = ["shahp7575 <shahp7575@gmail.com>"]
license="MIT"
readme = "README.md"
packages = [{include = "corny_ai"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.25.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
