[tool.poetry]
name = "corny-ai"
version = "0.1.0"
description = ""
authors = ["shahp7575 <shahp7575@gmail.com>"]
license="MIT"
readme = "README.md"
packages = [{include = "corny_ai"}]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.9.7"
openai = "^0.25.0"
streamlit = "^1.16.0"
streamlit-lottie = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
